---
config:
  layout: elk
  themeVariables:
    fontSize: '48px'
    fontFamily: 'arial'
  elk:
    mergeEdges: true
    nodePlacementStrategy: BRANDES_KOEPF
---
erDiagram

    %% ── CATÁLOGOS ──
    Currency        { string code PK }
    TaxGroup        { string id PK }

    %% ── RBAC ──
    Permission      { string id PK }
    Role            { string id PK }
    RolePermission  { string roleId FK }
    AppUser         { string id PK "login centralizado" }
    UserRole        { string id PK }

    %% ── ORGANIZACIÓN ──
    Chain           { string id PK }
    Zone            { string id PK }
    Restaurant      { string id PK }
    AuditLog        { string id PK }

    %% ── MENÚ TEMPLATE ──
    MenuTemplate        { string id PK }
    TemplateCategory    { string id PK }
    TemplateItem        { string id PK }
    TemplateItemVariant { string id PK }

    %% ── MENÚ LOCAL ──
    Station                  { string id PK }
    RestaurantCategory       { string id PK }
    RestaurantMenuItem       { string id PK }
    RestaurantMenuItemVariant{ string id PK }
    ModifierGroup            { string id PK }
    ModifierOption           { string id PK }
    MenuItemModifierGroup    { string menuItemId FK }

    %% ── OPERACIÓN ──
    DiningTable        { string id PK }
    DiningSession      { string id PK }
    DiningSessionTable { string id PK }
    Guest              { string id PK }

    %% ── ÓRDENES ──
    RestaurantOrder      { string id PK }
    OrderItem            { string id PK }
    OrderItemModifier    { string id PK }
    OrderItemStatusEvent { string id PK }

    %% ── LIQUIDACIÓN ──
    Settlement          { string id PK }
    SettlementAllocation{ string id PK }
    SettlementContribution{ string id PK }
    AppliedAdjustment   { string id PK }

    %% ── ANALYTICS ──
    AnalyticsJobRun     { string id PK }
    AnalyticSalesDaily  { string id PK }
    AnalyticItemVelocity{ string id PK }
    AnalyticServiceTimes{ string id PK }
    AnalyticDemandEstimate{ string id PK }

    %% Login Centralizado: AppUser (email + passwordHash) es el único punto de auth.
    %% ── RELACIONES ──

    Currency ||--o{ Chain              : " "
    Currency ||--o{ Restaurant         : " "
    Currency ||--o{ Settlement         : " "

    TaxGroup ||--o{ RestaurantCategory : " "
    TaxGroup ||--o{ RestaurantMenuItem : " "

    Permission ||--o{ RolePermission   : " "
    Role       ||--o{ RolePermission   : " "
    Role       }o--o| Chain            : " "
    Role       ||--o{ UserRole         : " "
    AppUser    ||--o{ UserRole         : " "

    AppUser ||--o{ Chain               : " "
    AppUser ||--o{ AuditLog            : " "
    AppUser ||--o{ DiningSession       : " "
    AppUser ||--o{ RestaurantOrder     : " "
    AppUser ||--o{ SettlementContribution: " "
    AppUser ||--o{ AppliedAdjustment   : " "
    AppUser ||--o{ AnalyticsJobRun     : " "
    AppUser ||--o{ OrderItemStatusEvent: " "

    Chain      ||--o{ Zone             : " "
    Chain      ||--o{ Restaurant       : " "
    Chain      ||--o{ MenuTemplate     : " "
    Zone       ||--o{ Restaurant       : " "

    Restaurant ||--o{ Station              : " "
    Restaurant ||--o{ RestaurantCategory   : " "
    Restaurant ||--o{ RestaurantMenuItem   : " "
    Restaurant ||--o{ ModifierGroup        : " "
    Restaurant ||--o{ DiningTable          : " "
    Restaurant ||--o{ DiningSession        : " "
    Restaurant ||--o{ RestaurantOrder      : " "
    Restaurant ||--o{ Settlement           : " "
    Restaurant ||--o{ AppliedAdjustment    : " "
    Restaurant ||--o{ AnalyticsJobRun      : " "
    Restaurant ||--o{ AnalyticSalesDaily   : " "
    Restaurant ||--o{ AnalyticItemVelocity  : " "
    Restaurant ||--o{ AnalyticServiceTimes  : " "
    Restaurant ||--o{ AnalyticDemandEstimate : " "

    MenuTemplate     ||--o{ TemplateCategory     : " "
    TemplateCategory ||--o{ TemplateItem         : " "
    TemplateItem     ||--o{ TemplateItemVariant   : " "
    TemplateItem     ||--o{ RestaurantMenuItem    : " "
    TemplateItemVariant ||--o{ RestaurantMenuItemVariant : " "

    RestaurantCategory    ||--o{ RestaurantMenuItem       : " "
    Station               ||--o{ RestaurantMenuItem       : " "
    RestaurantMenuItem    ||--o{ RestaurantMenuItemVariant: " "
    RestaurantMenuItem    ||--o{ MenuItemModifierGroup    : " "
    RestaurantMenuItem    ||--o{ OrderItem                : " "
    RestaurantMenuItemVariant ||--o{ OrderItem            : " "

    ModifierGroup  ||--o{ ModifierOption         : " "
    ModifierGroup  ||--o{ MenuItemModifierGroup  : " "
    ModifierOption ||--o{ OrderItemModifier      : " "

    DiningTable   ||--o{ DiningSessionTable : " "
    DiningSession ||--o{ DiningSessionTable : " "
    DiningSession ||--o{ Guest              : " "
    DiningSession ||--o{ RestaurantOrder    : " "
    DiningSession ||--o{ Settlement         : " "

    Guest ||--o{ OrderItem            : " "
    Guest ||--o{ SettlementAllocation : " "
    Guest ||--o{ SettlementContribution: " "

    RestaurantOrder ||--o{ OrderItem            : " "
    OrderItem       ||--o{ OrderItemModifier    : " "
    OrderItem       ||--o{ OrderItemStatusEvent : " "
    OrderItem       ||--o{ SettlementAllocation : " "
    OrderItem       ||--o{ AppliedAdjustment    : " "

    Settlement      ||--o{ SettlementAllocation : " "
    Settlement      ||--o{ SettlementContribution: " "
    Settlement      ||--o{ AppliedAdjustment    : " "
    SettlementContribution ||--o{ SettlementAllocation: " "

    AnalyticsJobRun ||--o{ AnalyticSalesDaily : " "
    AnalyticsJobRun ||--o{ AnalyticItemVelocity : " "
    AnalyticsJobRun ||--o{ AnalyticServiceTimes : " "
    AnalyticsJobRun ||--o{ AnalyticDemandEstimate : " "

    RestaurantMenuItem ||--o{ AnalyticItemVelocity : " "
    RestaurantMenuItem ||--o{ AnalyticDemandEstimate : " "
    Station ||--o{ AnalyticServiceTimes : " "

    %% Color Coding by Module
    classDef organization fill:#f9f9f9,stroke:#666,stroke-width:1px
    classDef identity fill:#e1f5fe,stroke:#0288d1,stroke-width:1px
    classDef catalog fill:#f1f8e9,stroke:#558b2f,stroke-width:1px
    classDef operations fill:#fff9c4,stroke:#fbc02d,stroke-width:1px
    classDef settlement fill:#e0f2f1,stroke:#00897b,stroke-width:1px
    classDef analytics fill:#f3e5f5,stroke:#8e24aa,stroke-width:1px

    class Currency, TaxGroup, Chain, Zone, Restaurant organization
    class Permission, Role, RolePermission, AppUser, UserRole, AuditLog identity
    class Station, MenuTemplate, TemplateCategory, TemplateItem, TemplateItemVariant, RestaurantCategory, RestaurantMenuItem, RestaurantMenuItemVariant, ModifierGroup, ModifierOption, MenuItemModifierGroup catalog
    class DiningTable, DiningSession, DiningSessionTable, Guest, RestaurantOrder, OrderItem, OrderItemModifier, OrderItemStatusEvent operations
    class Settlement, SettlementAllocation, SettlementContribution, AppliedAdjustment settlement
    class AnalyticsJobRun, AnalyticSalesDaily, AnalyticItemVelocity, AnalyticServiceTimes, AnalyticDemandEstimate analytics